# ansible-collection-common

./: .zuul.yaml  README.md  galaxy.yml.in  setup.cfg  tox.ini
roles/gearman/: README.md
roles/gearman/defaults/: main.yml
roles/gearman/handlers/: main.yml
roles/gearman/meta/: main.yml
roles/gearman/tasks/: firewall.yml  main.yml
roles/gearman/tests/: test.yml
roles/gearman/vars/: fedora.yml  main.yml
roles/grafana/: README.md
roles/grafana/defaults/: main.yml
roles/grafana/files/: env
roles/grafana/handlers/: main.yml
roles/grafana/tasks/: firewalld.yml  main.yml  provision_dashboard.yaml  provision_openstack.yaml
roles/grafana/templates/: custom.ini  dashboard.json.j2  env  grafana-renderer.service.j2  grafana.service.j2
roles/grafana/vars/: fedora.yml
roles/server/: README.md
roles/server/defaults/: main.yml
roles/server/files/etc/: motd
roles/server/handlers/: main.yml
roles/server/meta/: main.yml
roles/server/tasks/: journalctl.yaml  main.yml  sshd.yaml
roles/server/tests/: test.yml
roles/server/vars/: fedora.yaml  main.yml  redhat.yaml
roles/telegraf/defaults/: main.yml
roles/telegraf/meta/: main.yml
roles/telegraf/tasks/: main.yml
roles/telegraf/templates/: env  telegraf.conf  telegraf.service
roles/telegraf/vars/: fedora.yml
tools/: build.py  check-import.sh  run-ansible-sanity.sh
