[metadata]
name = ansible-collections-opentelekomcloud.common
summary = Common Ansible collections for Opentelekomcloud
description-file =
    README.md

author = opentelekomcloud
home-page = https://open.telekom.cloud
classifier =
    License :: OSI Approved :: Apache License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: System :: Systems Administration
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/collections/ansible_collections/opentelekomcloud/common/ = README.md
    share/ansible/collections/ansible_collections/opentelekomcloud/common/roles/ = roles/*
    share/ansible/collections/ansible_collections/opentelekomcloud/common/plugins/ = plugins/*
    share/ansible/collections/ansible_collections/opentelekomcloud/common/playbooks/ = playbooks/*
    share/ansible/collections/ansible_collections/opentelekomcloud/common/scripts/ = scripts/*
    share/ansible/collections/ansible_collections/opentelekomcloud/common/docs/ = docs/*
    share/ansible/collections/ansible_collections/opentelekomcloud/common/meta/ = meta/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
